@startuml erd-marketplace
title Entity Relationships — Marketplace (Draft v2)

entity "transport_windows" as tw {
  * id : bigint <<PK>>
  --
  * carrier_id : bigint <<FK>>
  * vehicle_id : bigint <<FK>>
  * origin_city : string
  origin_lat : decimal(9,6)
  origin_lng : decimal(9,6)
  * destination_city : string
  destination_lat : decimal(9,6)
  destination_lng : decimal(9,6)
  * start_at : datetime
  * end_at : datetime
  available_capacity_kg : integer
  price_reference : decimal
  pickup_radius_km : decimal
  status : string [open, pending_offer, reserved, closed]
  * created_at : datetime
  * updated_at : datetime
}

entity "cargos" as c {
  * id : bigint <<PK>>
  --
  * shipper_id : bigint <<FK>>
  * origin_city : string
  origin_lat : decimal(9,6)
  origin_lng : decimal(9,6)
  * destination_city : string
  destination_lat : decimal(9,6)
  destination_lng : decimal(9,6)
  * pickup_at : datetime
  * weight_kg : integer
  goods_description : text
  special_handling : string
  status : string [open, accepted, cancelled]
  * created_at : datetime
  * updated_at : datetime
}

entity "cargo_offers" as co {
  * id : bigint <<PK>>
  --
  * cargo_id : bigint <<FK>>
  * transport_window_id : bigint <<FK>>
  * carrier_id : bigint <<FK>>
  * vehicle_id : bigint <<FK>>
  * price_cents : integer
  * currency : string = 'ARS'
  message : text
  status : string [pending, accepted, rejected, expired]
  accepted_at : datetime
  * expires_at : datetime
  * created_at : datetime
  * updated_at : datetime
}

c ||--o{ co : "receives"
tw ||--o{ co : "targeted by"

note bottom
  Lat / lng stored as DECIMAL(9,6) columns (ADR-010); no spatial index.
  PKs are bigint (ADR-007). Currency stored as ISO 4217 string,
  default 'ARS'. Soft-deleted entities per ADR-009 include shipments, payments, arca_invoices and vehicles (field name: `discarded_at`).

  Authorship: the Shipper authors `cargo_offers` against a chosen
  `transport_window`. The Carrier accepts or rejects. On accept, the
  `cargo` is locked to that Carrier + Vehicle; sibling pending offers
  for the same `cargo` are auto-rejected in the same transaction and
  their `transport_windows` auto-flip pending_offer → open.

  Window-locks-on-Offer (MVP): at most one `pending` `cargo_offer`
  per `transport_window_id`. SQLite has no EXCLUDE constraint; the
  guard lives in the application layer.

  Cross-context FK: cargo_offers.vehicle_id → vehicles.id (Identity).
  Invariant: cargo_offers.vehicle_id == transport_windows.vehicle_id
  AND cargo_offers.carrier_id == transport_windows.carrier_id (the
  Shipper transitively pins both by picking the Window). The vehicle
  is copied into shipments.vehicle_id at acceptance (Fulfilment § 4.1)
  and frozen there. See erd-overview.puml for the cross-context wiring.
end note

@enduml
